tui/tests/snapshots/editor_viewport__zt_release_after_j.snap
---
source: tui/tests/editor_viewport.rs
expression: text
---
 Note 'Sample Note' normal mode                                                                        [?] Show keymap 
[Browser]                                   ▐ 󱇗 Sample Note                                                             
 󰝰 Notes                                    ▐ 40 Line 40 — the quick brown fox jumps over the lazy dog.                 
   󱇗 Sample Note                            ▐ 41 Line 41 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 42 Line 42 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 43 Line 43 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 44 Line 44 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 45 Line 45 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 46 Line 46 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 47 Line 47 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 48 Line 48 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 49 Line 49 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 50 Line 50 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 51 Line 51 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 52 Line 52 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 53 Line 53 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 54 Line 54 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 55 Line 55 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 56 Line 56 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 57 Line 57 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 58 Line 58 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 59 Line 59 — the quick brown fox jumps over the lazy dog.                 
                                            ▐ 60 Line 60 — the quick brown fox jumps over the lazy dog.                 
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐                                                                           
                                            ▐ NORMAL   󰝰 Notes  󱇗 Sample Note 
